--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>MODULE 1 PA - CABILOGAN</title>
+    <title>DVD Bouncing thing</title>
     <style>
       body { margin: 0; }
     </style>
