--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     </script>
   </head>
   <body>
-    <script type="module" src="./Scripts/main.js"></script>
+    <script type="module" src="Scripts/main.js"></script>
   </body>
 </html>
